<resources>
    <string name="app_name">TATAPI</string>
    <string name="welcomeTextString">Welcome to TATAPI</string>
    <string name="loginString">Login</string>
    <string name="createString">Create Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nameString">Name</string>
    <string name="passwordString">Password</string>
    <string name="loginCreateString">Login or Create an Account</string>
    <string name="welcomeLoginString">Login</string>
    <string name="start_game_button_label">Start Game</string>
    <string name="attack_button_label">Attack</string>
    <string name="defend_button_label">Defend</string>
    <string name="item_button_label">Item</string>
    <string name="magic_button_label">Magic</string>
    <string name="sample_health_text"></string>
    <string name="sample_battle_text"></string>
    <string name="sample_enemy_name">Test Enemy</string>
    <string name="welcomeHomeString">Welcome to TATAPI username</string>
    <string name="playString">Play</string>
    <string name="logoutString">Logout</string>
    <string name="modEnemyStats">Modify Enemy Stats</string>
    <string name="TagEnemyName">Enemy Name</string>
    <string name="TagEnemyHealth">Enemy Health</string>
    <string name="TagEnemyStrength">Enemy Strength</string>
    <string name="TagEnemyDefense">Enemy Defense</string>
    <string name="TagEnemyDescription">Enemy Description</string>
    <string name="LoadStats">Load Stats</string>
    <string name="UpdateStats">Update Stats</string>
    <string name="ModifyUser">Modify a User</string>
    <string name="TagUserName">User Name</string>
    <string name="TagUserHealth">User Health</string>
    <string name="TagUserStrength">User Strength</string>
    <string name="TagUserDefense">User Defense</string>
    <string name="TagUserLevel">User Level</string>
    <string name="TagUserHS">User Highscore</string>
    <string name="TagUserAdmin">User Admin</string>
    <string name="LoadUser">Load User</string>
    <string name="SaveUser">Save User</string>
    <string name="DeleteUser">Delete User</string>
    <!--  Back4app connection credentials  -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">pvk0ILQ0nY0kop4xpDJweRiKpDqT9vsNx2OTiUNz</string>
    <string name="back4app_client_key">aHmAPDNNQqh08PYWuaD1vfsEwlDgMkJoVsYo6CXq</string>
    <string name="leaderboardString">Leaderboard</string>
    <string name="adminString">Admin</string>
    <string name="adminWelcomeStr">Welcome to Admin </string>
    <string name="battleStartText">Battle Has Started!</string>
    <string name="title_activity_mod_enemy_stats">modEnemyStats</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="noToggleText"><font size="8">No</font></string>
    <string name="yesToggleText"><font size="8">Yes</font></string>
</resources>
