<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ModStatsLayout">

    <TextView
        android:id="@+id/modStatsTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/modEnemyStats"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/enemyNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nameString"
        android:autofillHints="@string/nameString"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modStatsTitleText"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/enemyNameTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TagEnemyName"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/enemyNameField"
        app:layout_constraintEnd_toStartOf="@+id/enemyNameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enemyNameField" />

    <Button
        android:id="@+id/loadStatsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/LoadStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enemyNameField" />

    <TextView
        android:id="@+id/enemyHealthTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/TagEnemyHealth"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/enemyHealthField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enemyHealthField"
        app:layout_constraintVertical_bias="0.619" />

    <EditText
        android:id="@+id/enemyHealthField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/TagEnemyHealth"
        android:autofillHints="@string/TagEnemyHealth"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enemyHealthTag"
        app:layout_constraintTop_toBottomOf="@+id/loadStatsBtn" />

    <TextView
        android:id="@+id/enemyStrengthTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TagEnemyStrength"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/enemyStrengthField"
        app:layout_constraintEnd_toStartOf="@+id/enemyStrengthField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enemyStrengthField"
        app:layout_constraintVertical_bias="0.523" />

    <EditText
        android:id="@+id/enemyStrengthField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/TagEnemyStrength"
        android:autofillHints="@string/TagEnemyStrength"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enemyHealthField" />

    <TextView
        android:id="@+id/enemyDefenseTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TagEnemyDefense"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/enemyDefenseField"
        app:layout_constraintEnd_toStartOf="@+id/enemyDefenseField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enemyDefenseField"
        app:layout_constraintVertical_bias="0.523" />

    <EditText
        android:id="@+id/enemyDefenseField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/TagEnemyDefense"
        android:autofillHints="@string/TagEnemyDefense"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enemyStrengthField" />

    <TextView
        android:id="@+id/enemyDescriptionTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TagEnemyDescription"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/enemyDescriptionField"
        app:layout_constraintEnd_toStartOf="@+id/enemyDescriptionField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enemyDescriptionField"
        app:layout_constraintVertical_bias="0.523" />

    <EditText
        android:id="@+id/enemyDescriptionField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/TagEnemyDescription"
        android:autofillHints="@string/TagEnemyDescription"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enemyDefenseField" />

    <Button
        android:id="@+id/updateStatsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/UpdateStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enemyDescriptionField" />

</androidx.constraintlayout.widget.ConstraintLayout>